Updated color palettr

--- a/lms/static/sass/partials/base/_variables.scss
+++ b/lms/static/sass/partials/base/_variables.scss
@@ -1,7 +1,12 @@
 @import 'lms/static/sass/partials/base/variables';
 
 // Theming overrides for sample theme
-$header-bg: #172a73;
-$footer-bg: rgb(140,21,21);
-$container-bg: rgb(241,241,241);
-$content-wrapper-bg: rgb(241,241,241);
+$header-bg: #ffffff;
+$header-border-color: #edf2fa;
+$footer-bg: #172a73;
+$container-bg: #ffffff;
+$content-wrapper-bg: #ffffff;
+$gray-l5: #edf2fa;
+$course-profile-bg: #edf2fa;
+$m-blue-d3: #172a73;
+$uxpl-blue-base: #172a73;
