Changed button color

--- a/lms/static/sass/partials/base/_variables.scss
+++ b/lms/static/sass/partials/base/_variables.scss
@@ -10,3 +10,5 @@ $gray-l5: #edf2fa;
 $course-profile-bg: #edf2fa;
 $m-blue-d3: #172a73;
 $uxpl-blue-base: #172a73;
+$action-primary-bg:#172a73;
+$link-color:#172a73;
