--- a/lms/templates/courseware/courseware.html
+++ b/lms/templates/courseware/courseware.html
@@ -154,7 +154,7 @@ ${HTML(fragment.foot_html())}
     </div>
 % endif
     <section class="course-content" id="course-content">
-        <header class="page-header has-secondary">
+        <!--header class="page-header has-secondary">
             <div class="page-header-main">
                 <nav aria-label="${_('Course')}" class="sr-is-focusable" tabindex="-1">
                     <div class="has-breadcrumbs">
@@ -182,7 +182,7 @@ ${HTML(fragment.foot_html())}
                     </div>
                 </nav>
             </div>
-        </header>
+        </header-->
 
         <main id="main" tabindex="-1" aria-label="Content">
             % if getattr(course, 'entrance_exam_enabled') and \
