Added course outline

--- a/lms/templates/courseware/info.html
+++ b/lms/templates/courseware/info.html
@@ -86,6 +86,9 @@ from openedx.features.course_experience import SHOW_REVIEWS_TOOL_FLAG
 
         </section>
         <section aria-label="${_('Handout Navigation')}" class="handouts">
+          % if course_outline:
+            ${HTML(course_outline.body_html())}
+          % endif
           <h3 class="hd hd-3 handouts-header">${_("Course Tools")}</h3>
             <div>
                 <a class="action-show-bookmarks" href="${reverse('openedx.course_bookmarks.home', args=[course.id])}">
