--- a/lms/templates/courseware/courseware.html
+++ b/lms/templates/courseware/courseware.html
@@ -216,6 +216,8 @@ ${HTML(fragment.foot_html())}
             % endif
 
               ${HTML(fragment.body_html())}
+
+              Hello there
         </main>
     </section>
 
